--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "~46.0.21",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.20.0",
     "react": "18.0.0",
     "react-native": "0.69.9",
     "react-native-anchor-carousel": "^4.0.1",
