--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-navigation/drawer": "*",
     "@react-navigation/native": "^6.1.6",
