--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.69.9",
     "react-native-anchor-carousel": "^4.0.1",
     "react-native-check-box": "^2.1.7",
+    "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-slider-box": "^2.0.7",
