--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-reanimated-carousel": "^3.3.0",
     "react-native-safe-area-context": "4.3.1",
